--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Dr Sergio Moguillansky Digital Card</title>
+<title>Dr. Sergio Moguillansky Digital Card</title>
 <meta property="og:image" content="https://i.postimg.cc/ZR4knQR9/C8961625-713-D-4816-AC93-E20423-EF2-A2-F-Phone.png" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
